--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -23,8 +23,8 @@ h1, h2, .link-position a, h3 {
 
 div.name-top {
     position: absolute;
-    top: 20px;
-    left: 25px;
+    top: 2%;
+    left: 1%;
 
     text-align: left;
 }
@@ -67,6 +67,58 @@ a.current-page {
     color: black; 
     font-weight: 600;
 }
+
+/* Dropdown Menu */
+
+.dropdown {
+    position: relative;
+    display: none;
+    float: right;
+    margin: 1% 2%;
+    border-radius: 10px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    right: 0;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown span {
+    display: block;
+    width: 50px;
+    height: 5px;
+    background-color: black;
+    border: 1px solid black;
+    margin: 8px;
+    border-radius: 20px
+}
+
+.dropdown-content nav a {
+    display: block;
+    padding: 20px 0 20px 10px;
+    border-bottom: 1px solid #d3d3d3;
+    color: grey;
+    text-align: center;
+    text-decoration: none;
+}
+
+.dropdown-content nav a:hover {
+    color: #444;
+}
+
+.dropdown:hover {
+    background-color: #f3f3f3;
+}
+
 
 /*General css*/
 
@@ -173,6 +225,19 @@ footer {
 footer p {
     font-size: 16px;
     padding: 0;
+}
+
+
+ /* Media Queries */
+
+@media only screen and (max-width: 1024px) {
+    .link-position {
+        display: none;
+    }
+
+    .dropdown {
+        display: block;
+    }
 }
 
 
