--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -83,6 +83,7 @@ a.current-page {
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
+    width: 20%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     right: 0;
     z-index: 1;
