--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -39,7 +39,7 @@ h1 a {
 h2 {
     font-size: 17px;
     font-weight: 400;
-    margin-left: 10px;
+    margin: 2% 0 0 10px;
 }
 
 /*header navigation links*/
