--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -287,6 +287,24 @@ footer p {
     }
 }
 
+@media only screen and (max-width: 700px) {
+
+    footer {
+        font-size: 0.7rem;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+
+    h1 a {
+        font-size: 1.3rem;
+    }
+
+    h2 {
+        font-size: 0.7rem;
+    }
+}
+
 
 
 
