--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -297,11 +297,15 @@ footer p {
 @media only screen and (max-width: 480px) {
 
     h1 a {
-        font-size: 1.3rem;
+        font-size: 1.1rem;
     }
 
     h2 {
         font-size: 0.7rem;
+    }
+
+    .footerlinks .insta {
+        display: none;
     }
 }
 
