--- a/articles/albumstyle.css
+++ b/articles/albumstyle.css
@@ -245,11 +245,12 @@ footer p {
 @media only screen and (max-width: 480px) {
 
     h1 a {
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
 
     h2 {
         font-size: 0.7rem;
+        margin-left: 2%;
     }
 
     .footerlinks .insta {
