Mobile footer and sizing.

--- a/articles/albumstyle.css
+++ b/articles/albumstyle.css
@@ -256,6 +256,10 @@ footer p {
     .footerlinks .insta {
         display: none;
     }
+
+    .footerlinks a {
+        margin: 0 10px;
+    }
 }
 
 
