--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -4,6 +4,13 @@ html {
     font-size: 20px;
 }
 
+@media only screen and (max-width: 300px) {
+
+	html {
+		font-size: 16px;
+	}
+}
+
 
 
 /*Header*/
@@ -86,6 +93,14 @@ a.current-page {
 }
 
 .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:active .dropdown-content {
+    display: block;
+}
+
+.dropdown:focus .dropdown-content {
     display: block;
 }
 
@@ -246,6 +261,12 @@ em:hover {
     }
 }
 
+@media only screen and (max-width: 340px) {
+	
+	.email-size {
+		font-size: 1rem;
+	}
+}
 
 
 /*Footer*/
