--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -60,6 +60,7 @@ div.link-position {
     font-weight: 400;
     text-decoration: none;
     margin: 0 18px;
+    transition: color 325ms;
 }
 
 .link-position a:hover {
@@ -139,11 +140,16 @@ a.current-page {
 .entry {
     padding: 30px 0;
     width: 95%;
-    max-width: 800px;
+    max-width: 825px;
 }
 
 .entry p {
     padding: 0;
+}
+
+.zoom-container {
+    overflow: hidden;
+    border-radius: 0.1rem;
 }
 
 .entry a {
@@ -160,6 +166,11 @@ a.current-page {
     max-width: 100%;
     height: auto;
     display: block;
+    transition: transform 500ms ease;
+}
+
+.entry a img:hover {
+    transform: scale(1.05);
 }
 
 .date {
@@ -273,6 +284,7 @@ footer {
     margin: 0 20px;
     color: grey;
     font-weight: 300;
+    transition: color 325ms;
 }
 
 .footerlinks {
@@ -306,6 +318,10 @@ footer p {
 
     footer {
         font-size: 0.7rem;
+    }
+
+    .entry a img:hover {
+        transform: none;
     }
 }
 
