--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -81,6 +81,10 @@ a.current-page {
     border-radius: 10px;
 }
 
+.hamburger:hover {
+    cursor: pointer;
+}
+
 .dropdown-content {
     display: none;
     position: absolute;
@@ -92,10 +96,6 @@ a.current-page {
     z-index: 1;
 }
 
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
 .dropdown span {
     display: block;
     width: 50px;
@@ -103,7 +103,8 @@ a.current-page {
     background-color: black;
     border: 1px solid black;
     margin: 8px;
-    border-radius: 20px
+    border-radius: 20px;
+    transition: all 250ms;
 }
 
 .dropdown-content nav a {
@@ -119,8 +120,28 @@ a.current-page {
     color: #444;
 }
 
-.dropdown:hover {
+.dropdown-background {
     background-color: #f3f3f3;
+}
+
+.bar1 {
+    transform: rotate(45deg);
+    position: relative;
+    top: 15px;
+    transition: all 250ms;
+}
+
+.bar2 {
+    background-color: transparent !important;
+    border: transparent !important;
+    transition: all 150ms;
+}
+
+.bar3 {
+    transform: rotate(-45deg);
+    position: relative;
+    bottom: 13px;
+    transition: all 250ms;
 }
 
 
