Update prefixes to new dropdown cross.

--- a/articles/albumstyle.css
+++ b/articles/albumstyle.css
@@ -122,10 +122,8 @@ a.current-page {
 }
 
 .bar1 {
-    -webkit-transform: rotate(45deg);
-            transform: rotate(45deg);
-    position: relative;
-    top: 15px;
+    -webkit-transform: rotate(45deg) translate(11px, 11px);
+            transform: rotate(45deg) translate(11px, 11px);
     -webkit-transition: all 250ms;
     transition: all 250ms;
 }
@@ -138,10 +136,8 @@ a.current-page {
 }
 
 .bar3 {
-    -webkit-transform: rotate(-45deg);
-            transform: rotate(-45deg);
-    position: relative;
-    bottom: 13px;
+    -webkit-transform: rotate(-45deg) translate(9px, -9px);
+            transform: rotate(-45deg) translate(9px, -9px);
     -webkit-transition: all 250ms;
     transition: all 250ms;
 }
