--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -371,6 +371,10 @@ footer p {
 
 @media only screen and (max-width: 480px) {
 
+    header.header-home {
+        height: 300px;
+    }
+
     h1 a {
         font-size: 1rem;
     }
