landing photo size adjustmant at 900px.

--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -217,6 +217,10 @@ a.current-page {
     .entry {
         max-width: 95%;
     }
+
+      header.header-home {
+        height: 475px;
+    }
 }
 
 
