--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -368,6 +368,10 @@ footer p {
     header.head-home {
         height: 500px;
     }
+
+    .email-size {
+        font-size: 1rem;
+    }
 }
 
 @media only screen and (max-width: 700px) {
