--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -301,6 +301,7 @@ em:hover {
     padding-top: 50px;
 }
 
+/*Contact me Media Queries*/
 
 @media only screen and (max-width: 900px) {
 
@@ -417,7 +418,7 @@ footer p {
     }
 
     p {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
     }
 }
 
