--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -162,14 +162,22 @@ a.current-page {
 }
 
 
+a { 
+    text-decoration: none;
+}
+
+
 
 /*Body of the home page*/
+
+#blog_entries {
+    max-width: 825px;
+}
 
 p.intro {
     width: 90%;
     padding: 2%;
-    margin-top: 2%;
-    margin-bottom: 3%;
+    margin-bottom: 4%;
     border-top: 2px solid #d3d3d3;
     border-bottom: 2px solid #d3d3d3;   
 }
@@ -178,6 +186,8 @@ p.intro {
     padding: 0.25rem 0;
     width: 95%;
     max-width: 825px;
+    position: relative;
+    display: inline-block;
 }
 
 .zoom-container {
@@ -194,10 +204,18 @@ p.intro {
     font-family: "nuito sans", sans-serif;
     line-height: 40px;
     margin-bottom: 2px;
-}
-
-a { 
-    text-decoration: none;
+    position: absolute;
+    margin: auto auto;
+    color: black;
+    z-index: 1;
+    padding: 10px;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 50%;
+    height: 107px;
+    background-color: rgb(248, 248, 248, 0.6);
 }
 
 .entry img {
@@ -208,6 +226,7 @@ a {
     transition: -webkit-transform 500ms ease;
     transition: transform 500ms ease;
     transition: transform 500ms ease, -webkit-transform 500ms ease;
+    z-index: 0;
 }
 
 .entry img:hover {
@@ -384,10 +403,23 @@ footer p {
         font-size: 0.7rem;
     }
 
-    .entry a img:hover {
+    .entry img:hover {
         transform: none;
     }
 }
+
+@media only screen and (max-width: 590px) {
+
+    h4 {
+        font-size: 2rem;
+    }
+
+    .date {
+        font-size: 0.7rem;
+    }
+}
+
+
 
 @media only screen and (max-width: 480px) {
 
@@ -422,6 +454,18 @@ footer p {
 
     p {
         font-size: 0.8rem;
+    }
+
+    h4 {
+        width: 60%;
+    }
+}
+
+@media only screen and (max-width: 380px) {
+
+    h4 {
+        width: 80%;
+        padding: 0;
     }
 }
 
