--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -215,7 +215,8 @@ p.intro {
     bottom: 0;
     width: 50%;
     height: 107px;
-    background-color: rgb(248, 248, 248, 0.6);
+    background-color: rgb(248, 248, 248, 0.7);
+    border-radius: 0.1rem;
 }
 
 .entry img {
