--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -410,7 +410,7 @@ footer p {
     }
 }
 
-@media only screen and (max-width: 590px) {
+@media only screen and (max-width: 600px) {
 
     h4 {
         font-size: 2rem;
@@ -418,6 +418,10 @@ footer p {
 
     .date {
         font-size: 0.7rem;
+    }
+
+    p {
+        font-size: 0.9rem;
     }
 }
 
