--- a/articles/albumstyle.css
+++ b/articles/albumstyle.css
@@ -217,6 +217,19 @@ p {
     }
 }
 
+.insta-logo {
+    position: absolute;
+    z-index: 1;
+    right: 5px;
+    bottom: 5px;
+    width: 25px;
+    height: auto;
+}
+
+.insta-logo-container {
+    position: relative;
+}
+
 
 
 
@@ -274,6 +287,10 @@ footer p {
     footer {
         font-size: 0.7rem;
     }
+
+    .insta-logo {
+        width: 22px;
+    }
 }
 
 @media only screen and (max-width: 480px) {
@@ -293,6 +310,10 @@ footer p {
 
     .footerlinks a {
         margin: 0 10px;
+    }
+
+    .insta-logo {
+        width: 20px;
     }
 }
 
