--- a/articles/albumstyle.css
+++ b/articles/albumstyle.css
@@ -169,6 +169,20 @@ a.current-page {
     max-width: 100%;
     height: auto; 
 }  
+.iframe-container {
+  overflow: hidden;
+  padding-top: 56.25%;
+  position: relative;
+}
+ 
+.iframe-container iframe {
+   border: 0;
+   height: 100%;
+   left: 0;
+   position: absolute;
+   top: 0;
+   width: 100%;
+}
 
 h3 {
     font-weight: 300;
@@ -181,7 +195,7 @@ p.date {
     text-align: left;
     padding: 0;
     font-size: 0.8rem;
-    margin: 1px 1px 25px 1px;
+    margin: 1px 1px 17px 1px;
     font-family: "nunito sans", sans-serif;
     border-bottom: 2px solid #d3d3d3;
 
