--- a/articles/albumstyle.css
+++ b/articles/albumstyle.css
@@ -329,6 +329,13 @@ footer p {
     }
 }
 
+@media only screen and (max-width: 600px) {
+
+    p {
+        font-size: 0.85rem;
+    }
+}
+
 @media only screen and (max-width: 480px) {
 
     h1 {
@@ -338,6 +345,10 @@ footer p {
     h2 {
         font-size: 0.7rem;
         margin-left: 2%;
+    }
+
+    p {
+        font-size: 0.8rem;
     }
 
     .footerlinks .insta {
