--- a/articles/albumstyle.css
+++ b/articles/albumstyle.css
@@ -7,6 +7,52 @@ html {
 
 
 
+/*Banner*/
+
+.banner {
+    display: none;
+}
+
+.banner-left {
+    float: left;
+    width: 50%;
+    
+    color: black;
+}
+
+.banner div {
+    display: inline-block;
+    width: 50%;
+    padding: 10px 0 10px 0;
+    background-color: rgb(248, 248, 248, 0.7);
+}
+
+.banner div a {
+    color: grey;
+    font-size: 18px;
+    font-family: "nunito sans", sans-serif;
+    font-weight: 400;
+    text-decoration: none;
+    transition: color 325ms;
+}
+
+.banner div a:hover {
+    color: #444;
+}
+
+.banner div a.current-banner-page {
+    color: black;
+    font-weight: 600;
+    background-color: #e9e9e9;
+}
+
+.banner div.current-banner-page {
+    background-color: #e9e9e9;
+}
+
+
+
+
 
 /*Header*/
 
@@ -311,7 +357,17 @@ footer p {
     .dropdown {
         display: block;
     }
+
+    .banner {
+        display: block;
+    }
+
+    div.name-top {
+        top: 5%;
+    }
 }
+
+
 
 @media only screen and (max-width: 700px) {
 
