--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -13,6 +13,54 @@ html {
 
 
 
+
+
+/*Banner*/
+
+.banner {
+    display: none;
+}
+
+.banner-left {
+    float: left;
+    width: 50%;
+    
+    color: black;
+}
+
+.banner div {
+    display: inline-block;
+    width: 50%;
+    padding: 10px 0 10px 0;
+    background-color: rgb(248, 248, 248, 0.7);
+}
+
+.banner div a {
+    color: grey;
+    font-size: 18px;
+    font-family: "nunito sans", sans-serif;
+    font-weight: 400;
+    transition: color 325ms;
+}
+
+.banner div a:hover {
+    color: #444;
+}
+
+.banner div a.current-banner-page {
+    color: black;
+    font-weight: 600;
+    background-color: #e9e9e9;
+}
+
+.banner div.current-banner-page {
+    background-color: #e9e9e9;
+}
+
+
+
+
+
 /*Header*/
 
 header {
@@ -33,7 +81,7 @@ h1, h2, .link-position a, h3 {
 
 div.name-top {
     position: absolute;
-    top: 2%;
+    top: 2%;   
     left: 1%;
     text-align: left;
 }
@@ -57,7 +105,7 @@ h2 {
 div.link-position {
     position: absolute;
     right: 30px;
-    top: 45px;
+    top: 45px; 
 }
 
 .link-position a {
@@ -397,6 +445,14 @@ footer p {
 
     .dropdown {
         display: block;
+    }
+
+    .banner {
+        display: block;
+    }
+
+    div.name-top {
+        top: 5%;
     }
 
     header.head-home {
