--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -452,7 +452,10 @@ footer p {
     }
 
     div.name-top {
-        top: 5%;
+        position: relative;
+        float: left;
+        top: 2%;
+        left: 1%;
     }
 
     header.head-home {
