--- a/articles/albumstyle.css
+++ b/articles/albumstyle.css
@@ -363,7 +363,10 @@ footer p {
     }
 
     div.name-top {
-        top: 5%;
+        position: relative;
+        float: left;
+        top: 2%;
+        left: 1%;
     }
 }
 
