--- a/articles/albumstyle.css
+++ b/articles/albumstyle.css
@@ -365,7 +365,7 @@ footer p {
     div.name-top {
         position: relative;
         float: left;
-        top: 2%;
+        top: 0.4rem;
         left: 1%;
     }
 }
