--- a/portfolio/portfolio-resources/portfolio-css/portfolio.css
+++ b/portfolio/portfolio-resources/portfolio-css/portfolio.css
@@ -396,7 +396,7 @@ footer p {
     div.name-top {
         position: relative;
         float: left;
-        top: 2%;
+        top: 0.4rem;
         left: 1%;
     }
 }
