--- a/resources/css/style-my-blog.css
+++ b/resources/css/style-my-blog.css
@@ -454,7 +454,7 @@ footer p {
     div.name-top {
         position: relative;
         float: left;
-        top: 2%;
+        top: 0.4rem;
         left: 1%;
     }
 
