portfolio album pic layout update.

--- a/resources/css/header-footer.css
+++ b/resources/css/header-footer.css
@@ -433,6 +433,12 @@ a {
 }
 
 
+@media only screen and (max-height: 750px) {
+    .header-quote-container {
+        margin-bottom: 4%;
+    }
+}
+
 
 
 
