--- a/portfolio/portfolio-resources/portfolio-css/portfolio.css
+++ b/portfolio/portfolio-resources/portfolio-css/portfolio.css
@@ -115,26 +115,21 @@ html {
 
 
 .album-photo-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-flow: row wrap;
-        flex-flow: row wrap;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
-.album-photo-container img {
-    width: 20%;
-    margin: 0 10px 10px 10px;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-    min-width: 250px;
-    max-width: 35%;
+.row {
+    flex: 20%;
+    max-width: 25%;
+    padding: 0 4px;
+}
+
+.row img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
 }
 
 .back_to_top {
@@ -160,6 +155,11 @@ html {
     .body {
         max-width: 95%;
     }
+
+    .row {
+        flex: 48%;
+        max-width: 48%;
+    }
 }
 
 @media only screen and (max-width: 700px) {
@@ -167,10 +167,6 @@ html {
     h3 {
         margin-bottom: 40px;
         padding-top: 20px;
-    }
-
-    .album-photo-container img {
-        max-width: 100%;
     }
 }
 
@@ -188,7 +184,21 @@ html {
     .album-link-title {
         background-color: rgba(15, 15, 15, 0.5); 
     }
+
+    .column {
+        flex: 100%;
+        max-width: 100%;
+    }
 }
+
+@media only screen and (max-width: 500px) {
+
+    .row {
+        flex: 100%;
+        max-width: 100%;
+    }
+}
+
 
 @media only screen and (max-width: 480px) {
 
