--- a/portfolio/portfolio-resources/portfolio-css/portfolio.css
+++ b/portfolio/portfolio-resources/portfolio-css/portfolio.css
@@ -17,6 +17,7 @@ html {
     text-align: left;
     font-family: 'Martel', serif;
     font-size: 46px;
+    font-size: 46px;
     font-size: 2.3rem;
     padding: 3% 0 1% 0;
     border-bottom: 2px solid #d3d3d3;
@@ -70,11 +71,13 @@ html {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     z-index: 10;
     /*font-family: "nuito sans", sans-serif;*/
     font-family: 'Martel', serif;
     color: white;
+    font-size: 30px;
     font-size: 1.5rem;
     font-weight: 300;
     padding: 4%;
@@ -99,6 +102,7 @@ html {
     background-color: rgba(15, 15, 15, 0);
     z-index: 2;
     box-sizing: border-box;
+    -webkit-transition: background-color 600ms ease;
     transition: background-color 600ms ease;
 }
 
@@ -115,13 +119,20 @@ html {
 
 
 .album-photo-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .row {
-    flex: 20%;
+    -webkit-box-flex: 20%;
+        -ms-flex: 20%;
+            flex: 20%;
     max-width: 25%;
     padding: 0 4px;
 }
@@ -157,7 +168,9 @@ html {
     }
 
     .row {
-        flex: 48%;
+        -webkit-box-flex: 48%;
+            -ms-flex: 48%;
+                flex: 48%;
         max-width: 48%;
     }
 }
@@ -186,7 +199,9 @@ html {
     }
 
     .column {
-        flex: 100%;
+        -webkit-box-flex: 100%;
+            -ms-flex: 100%;
+                flex: 100%;
         max-width: 100%;
     }
 }
@@ -194,7 +209,9 @@ html {
 @media only screen and (max-width: 500px) {
 
     .row {
-        flex: 100%;
+        -webkit-box-flex: 100%;
+            -ms-flex: 100%;
+                flex: 100%;
         max-width: 100%;
     }
 }
@@ -206,8 +223,6 @@ html {
         font-size: 0.8rem;
     }
 }
-
-
 
 
 
